task1/httpd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
  labels:
    app: proxy
  namespace: dev-httpd
spec:
  containers:
    - name: httpd
      image: httpd:latest
      ports:
        - containerPort: 80
      volumeMounts:
        - name: index-html
          mountPath: /usr/local/apache2/htdocs/
  volumes:
    - name: index-html
      configMap:
        name: httpd-nginx 

---

apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
spec:
  selector:
    app: proxy
  ports:
  - name: dev-httpd-svc
    protocol: TCP
    port: 80
    targetPort: 80
