task1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: proxy
  namespace: dev-nginx  
spec:
  containers:
  - name: nginx
    image: prathameshbhujade/nginx_css_image:1.0
    ports:
      - containerPort: 80
        name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: proxy
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
