task1/tomcat.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat
  labels:
    app: proxy
  namespace: dev-tomcat
spec:
  containers:
  - name: tomcat
    image: prathameshbhujade/tomcat_student-ui:1.0
    ports:
      - containerPort: 8080
        name: tomcat-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
spec:
  selector:
    app: proxy
  ports:
  - name: tomcat-svc
    protocol: TCP
    port: 8080
    targetPort: tomcat-web-svc
